# isabelle-plugin-api

./: Cargo.toml  README.md
src/: actor.rs  api.rs  lib.rs  plugin_pool.rs
tests/: api_defaults_tests.rs  plugin_pool_tests.rs
tests/common/: mod.rs
