[package]
name = "isabelle-plugin-api"
version = "1.13.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["cookies", "rustls-0_23" ] }
isabelle-dm = { "git" = "https://github.com/isabelle-platform/isabelle-dm", tag = "1.5.0" }
libloading = "0.8.3"
log = "0.4.0"
serde_json = "1.0.96"
